--- a/css/stylepianisti.css
+++ b/css/stylepianisti.css
@@ -4,7 +4,7 @@ body{background-color: rgba(255, 255, 255, 0.697);
 #menu {padding: 0.5% 4% 0.5% 4%;
     }
 
-.migliori {padding-top: 23vh;
+#migliori {padding-top: 23vh;
         text-align: left;
         font-size: 8vh;
         color: black;
